[package]
links="slang"
name = "libslang-sys"
version = "0.1.0"
authors = ["warlock <internalmike@gmail.com>"]
description = "Rust S-Slang library low-level FFI."
readme = "README.md"
documentation = "https://docs.rs/libslang-sys/"
keywords = ["S-Lang"]
categories = ["external-ffi-binding", "no-std"]
license = "MIT/Apache-2.0"
repository = "https://github.com/A1-Triard/libslang-sys"
edition = "2018"

[dependencies]
libc = "0.2.72"

[build-dependencies]
cc = { version = "1.0.58", features = ["parallel"] }
pkg-config = "0.3.17"
